--- a/tp.tex
+++ b/tp.tex
@@ -56,40 +56,42 @@
    \end{lstlisting}
    Pour cela, on pourra suivre les étapes suivantes 
     \begin{itemize}
-      \item créer une liste (\texttt{alpha}) qui contient l'alphabet. regarder la documentation de string.ascii\_lowercase
-      \item créer la liste décalée (\texttt{decale}) de la clef (utilise une boucle, ou l'indicage des listes plus la contatenation 
+      \item créer une liste (\texttt{alpha}) qui contient l'alphabet. Pour cela, regarder ce que renvoie la commande \\ 
+      \texttt{string.ascii\_lowercase}
+      attention ne pas oublier d'importer le module string (\texttt{import string})
+      \item créer la liste décalée (\texttt{decale}) de la clef (utilise une boucle, ou l'indiçage des listes plus la contatenation 
       \begin{lstlisting}
         l = [1,2,3, 4]; g = l[2:] # g = [3,4]
         a = [12, 'g', -1] + ['e', '7'] #  a = [12, 'g', -1, 'e', '7']
        \end{lstlisting}
       \item créer un dictionnaire (par une boucle dic = \{\} avec pour clefs les éléments de \texttt{alpha} et pour valeurs les
       elements de \texttt{decale}
-      \item avec une boucle sur la longueur de mot , crypter le mot
+      \item avec une boucle sur la longueur de mot, crypter le mot
     \end{itemize}
    \item écrire une fonction \texttt{vraisemblance} prenant en argument un dictionnaire(une liste de chaînes de caractères), une phrase (liste
    de mots) et une clef, et qui compte le nombre de mots de la phrase decodés par la clef presents dans le dictionnaire
    \item en utilisant le squelette de programme fourni et le mini-dictionnaire, tenter de décoder la phrase suivante \\
    \begin{center}
-   {\large \bf ohv pdwkv f hvw elhq} 
+   {\large \bf hi owasg acwbg zo dvmgweis eis zsg aohvg}
    \end{center} 
   
 
-   en cherchant une clef dont la vraisemblance et superieure à 1.
+   en cherchant une clef dont la vraisemblance est supérieure ou égale à 1.
 \end{enumerate}
 
 \textbf{Animation graphique}
 
- Le but de cet exercice est de vous montrez comment la programmation peut intervenir dans une animation graphique simple d'images de synthèse.
- On considera dans ce cadre, juste le coté géometrique de l'animation. Dans le squelette fourni en TP, on a deja un debut d'animation  : 
+ Le but de cet exercice est de vous montrer comment la programmation peut intervenir dans une animation graphique simple ``d'images de synthèse''.
+ On considera dans ce cadre, juste le coté géometrique de l'animation. Dans le squelette fourni en TP, on a déjà un début d'animation: 
  une sphere qui suit une trajectoire rectiligne. 
  Pour situer la sphère aux coordonnées $(x,y,z)$ dans le repère choisi, on utilisera l'instruction \texttt{sphereActor.SetPosition(x,y,z)}
- Dans l'exemple donné on fait varier la coordonnee $z$ de la boule ce qui a pour effet de l'envoyez vers le fond de l'ecran.
+ Dans l'exemple donné, on fait varier la coordonnée $y$ de la sphère. 
 
- 
  \begin{enumerate} 
  
-    \item faire tourner le programme et essayer de programmer une trajectoire du type $y = y_0 - v_y * t$. Pour régler la position de la caméra, utiliser
-    la souris et presser \texttt{e} pour lancer l'animation
+    \item Faire tourner le programme. Pour régler la position de la caméra, utiliser
+    la souris et presser \texttt{e} pour lancer l'animation. Enlever le commentaire devant la ligne
+    \texttt{ren1.GetActiveCamera().Azimuth( 0.2 )} pour tourner autour de la scene durant l'animation
     \item essayer de programmer un rebond quand on detecte des coordonnées $y$ négatives, en utilisant le schéma suivant 
    \begin{center}
      \includegraphics[width=0.8\linewidth]{rebond.pdf}
@@ -98,7 +100,8 @@
    \item programmer un rebond quand $y \geqslant H$
    \item on introduit de la même façon les composantes $v_x$ et $v_z$ de la vitese. Programmer les tests de bords ($x <0$, $z < 0$ et $x > L$, $z > P$)
    \item on peut ajouter du frein $vx *= -\alpha$ où $\alpha < 1$ pour ralentir la balle quand elle rebondit.
-   \item voila, on a notre animation graphique!
+   \item voila, on a notre animation graphique. En allant regarder la documentation de vtk (\texttt{ www.vtk.org}), editer le fichier \texttt{cree\_scene.py}
+   pour modifier les paramètres de l'animation (forme de la boule, couleurs de fond, etc...)
     
   \end{enumerate}
 \end{document}
