probleme image python commentaire

--- a/init_python.tex
+++ b/init_python.tex
@@ -95,15 +95,14 @@
 %****************************************************************
 % Page de presentation 
 %**************************************************************
-\begin{frame}
+\begin{frame}[fragile]
 \begin{center}
 {\Large Initiation à la Programmation avec \python } 
 \end{center}
 \vspace{0.5cm}
-\IfFileExists{python_image.pdf}{
 \begin{center}
-\includegraphics[width=0.8\linewidth]{python_image.pdf}
-\end{center}}
+%\includegraphics[width=0.8\linewidth]{python_image.pdf}
+\end{center}
 \vspace{0.5cm}
 \begin{center}
 {\large Inria Bordeaux-Sud Ouest -  Fête de la Science 2013}
