phrase pédante modifiée

--- a/init_python.tex
+++ b/init_python.tex
@@ -184,7 +184,7 @@
 \begin{frame}[fragile]
 \frametitle{Caractéristiques du langage \python}
 \begin{itemize}
-  \item \python est un langage de programmation à typage dynamique qui support plusieurs paradigmes de programmation.
+    \item \python est un langage simple, qui accepte plusieurs façons({\em paradigmes}) de programmer 
   \item il est généralement exécuté par des interpréteurs (CPython, Pypy , JPython)
   \item la structure du programme se gère grâce à des indentations : attention à aligner
   les blocs avec le même nombre d'espaces.
