--- a/tp_collegien.tex
+++ b/tp_collegien.tex
@@ -46,7 +46,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \textbf{Date de naissance}
 \begin{enumerate}
-   \item faire tourner le code fourni en exemple
+   \item faire tourner le code fourni en exemple \texttt{date.py}
 \end{enumerate}
 
 \textbf{Animation graphique}
