modif tp sphere enonce sans azimuth

--- a/tp.tex
+++ b/tp.tex
@@ -67,8 +67,7 @@
 
  \begin{enumerate} 
  
-    \item Faire tourner le programme. Enlever le commentaire devant la ligne
-    \texttt{ren1.GetActiveCamera().Azimuth( 0.2 )} pour tourner autour de la scène durant l'animation
+    \item faire tourner le programme \texttt{sphere.py}. 
     \item essayer de programmer un rebond quand on détecte des coordonnées $y$ négatives, en utilisant le schéma suivant 
    \begin{center}
      \includegraphics[width=0.8\linewidth]{rebond.pdf}
