--- a/init_python.tex
+++ b/init_python.tex
@@ -172,7 +172,7 @@
 \item Ce qui donne en \python
 \begin{lstlisting} 
     s = 1  
-    for i in range(n):
+    for i in range(2,n+1):
         s = s + i
     print s
 \end{lstlisting}
